--- a/public/transactions.html
+++ b/public/transactions.html
@@ -20,9 +20,9 @@
                   </button>
                   <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <div class="d-flex">
-                  <a href="http://home.html"><button class="btn" type="button"><i class="bi bi-house-door-fill fs-4 " ></i></button></a>
+                  <a href="home.html"><button class="btn" type="button"><i class="bi bi-house-door-fill fs-4 " ></i></button></a>
                 
-                  <a href="http://transactions.html"><button class="btn" type="button"><i class="bi bi-currency-exchange fs-4 color-secondary "></i></button></a>
+                  <a href="transactions.html"><button class="btn" type="button"><i class="bi bi-currency-exchange fs-4 color-secondary "></i></button></a>
                 
                   <div class="dropdown">
                     <button class="btn" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-circle fs-4"></i>
