--- a/public/home.html
+++ b/public/home.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
@@ -104,17 +104,17 @@
              </div>
               </div>
               <button class="btn button-float" data-bs-toggle="modal"
-               data-bs-target="#transaction-Modal"><i class="bi bi-plus"></i></button>
+               data-bs-target="#transactions-Modal"><i class="bi bi-plus"></i></button>
              </div>
       <!-- Modal -->
-  <div class="modal fade" id="transaction-Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="transactions-Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Adicionar lançamentos</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <form id="transaction-form">
+        <form id="transactions-form">
         <div class="modal-body">
             
                 <div class="mb-3">
